# apt

./: .codecov.yml  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  Dockerfile  configure.ac  shippable.yml  triehash.pl
CMake/: Documentation.cmake  FindMoreGettext.cmake  Misc.cmake  Translations.cmake  config.h.in  endian.h.in  string.h.in  vendor_substitute.cmake
apt-inst/: CMakeLists.txt  makefile
apt-inst/contrib/: arfile.cc  arfile.h  extracttar.cc  extracttar.h
apt-inst/deb/: debfile.h
apt-pkg/: CMakeLists.txt  acquire-item.cc  acquire-item.h  acquire-method.cc  acquire-method.h  acquire-worker.cc  acquire-worker.h  acquire.cc  acquire.h  algorithms.cc  algorithms.h  cachefile.h  cachefilter-patterns.cc  cachefilter.h  cacheiterators.h  cacheset.h  cdrom.h  clean.h  depcache.cc  depcache.h  generate-hashes.py  indexcopy.h  indexfile.cc  indexfile.h  init.cc  init.h  install-progress.cc  install-progress.h  metaindex.cc  metaindex.h  orderlist.cc  orderlist.h  packagemanager.h  pbo-solver.cc  pbo-solver.h  pkgcache.cc  pkgcache.h  pkgcachegen.cc  pkgcachegen.h  pkgrecords.h  (+12 more)
apt-pkg/contrib/: arfile.cc  arfile.h  cdromutl.h  cmndline.h  configuration.cc  configuration.h  crc-16.cc  crc-16.h  error.h  extracttar.h  fileutl.cc  fileutl.h  gpgv.cc  hashes.cc  hashes.h  hashsum.cc  hashsum_template.h  macros.h  md5.cc  md5.h  memrchr.cc  mmap.cc  netrc.cc  netrc.h  sha1.cc  sha1.h  sha2.h  sha2_internal.cc  sptr.h  srvrec.cc  srvrec.h  strchrnul.cc  string_view.h  strutl.cc  strutl.h  trie.h
apt-pkg/deb/: debfile.h  debindexfile.cc  debindexfile.h  deblistparser.cc  deblistparser.h  debmetaindex.cc  debmetaindex.h  debrecords.h  debsrcrecords.h  debsystem.cc  debsystem.h  dpkgpm.cc
apt-pkg/edsp/: edsplistparser.h
apt-private/: CMakeLists.txt  makefile  private-cacheset.cc  private-cacheset.h  private-cmndline.cc  private-install.cc  private-json-hooks.cc  private-json-hooks.h  private-search.cc  private-show.cc  private-source.cc
buildlib/: environment.mak.in
cmdline/: apt-cache.cc  apt-get.cc  apt-key.in  apt-mark.cc  apt.cc
debian/: NEWS  apt-daily.timer  apt-wait-online-NetworkManager.service  apt-wait-online-systemd-networkd.service  apt.install  changelog  control  libapt-inst1.90.symbols  libapt-inst2.0.symbols  libapt-inst3.0.symbols  libapt-pkg4.90.symbols  libapt-pkg6.0.symbols  rules
doc/: CMakeLists.txt  apt-search-terms.5.xml  apt-verbatim.ent  apt_auth.conf.5.xml
doc/examples/: configure-index
doc/po/: apt-doc.pot  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po
ftparchive/: CMakeLists.txt  byhash.cc  sources.cc
methods/: CMakeLists.txt  aptmethod.h  basehttp.cc  cdrom.cc  connect.cc  connect.h  file.cc  ftp.cc  ftp.h  gpgv.cc  http.cc  http.h  mirror.cc  rsh.cc  server.cc  store.cc
po/: apt-all.pot  ar.po  ast.po  bg.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  hu.po  it.po  ja.po  km.po  ko.po  ku.po  lt.po  mr.po  nb.po  ne.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sv.po  th.po  tl.po  tr.po  (+4 more)
test/integration/: framework  test-apt-acquire-additional-files  test-apt-by-hash-update  test-apt-get-install-narrow  test-apt-key  test-apt-patterns  test-bug-595691-empty-and-broken-archive-files  test-bug-604222-new-and-autoremove  test-bug-612099-multiarch-conflicts  test-bug-712435-missing-descriptions  test-bug-806959-dequote-redirect  test-compressed-indexes  test-github-111-invalid-armember  test-ubuntu-bug-1098738-apt-get-source-md5sum
test/interactive-helper/: CMakeLists.txt  aptwebserver.cc
test/libapt/: CMakeLists.txt  cachefilter_test.cc  commandline_test.cc  compareversion_test.cc  extracttar_test.cc  hashsums_test.cc  srvrecs_test.cc  strutil_test.cc
